# claude-dev-cookiecutter

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .make_cookiecutter_zipfile.sh  .pre-commit-config.yaml  CHANGELOG.md  README.md  api_docs.md  developer_notes.md  load_data.sh  project_overview.md  pyproject.toml  run_script.sh  todo.md  ux_overview.md
{{cookiecutter.project_name}}/prompts/: 01_request_TODOs.md  02_code_prompts.md
{{cookiecutter.project_name}}/tests/: test_all_code.py
